styles.css
:root {
  --green: #38ccae;
  --dark: #1b1b1b;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background: #1b1b1b;
  background: linear-gradient(to top right, var(--dark), var(--green));
  overflow: hidden;
}

.container {
  max-width: 1200px;
  display: flex;
  flex-wrap: wrap;
  padding: 32px 92px;
  border-radius: 20px;
  background: linear-gradient(to left bottom, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.75));
  backdrop-filter: blur(8px);
  color: #fff;
  font-family: "Montserrat", Arial, Helvetica, sans-serif;
}


.background__img {
  position: absolute;
}

.background__img--button {
  right: 60%;
  bottom: 100%;
  height: 30vh;
  animation: slideDown 12s linear infinite;
}   

.background__img--dots {
  left: 50%;
  top: 0;
  height: 75vh;
  animation: rotate 25s linear infinite;
}

.background__img--logo {
  left: 0;
  top: 50%;
  width: 50%;
  transform: translate(-50%, -50%);
  opacity: 0.25;
}

header {
  flex: 1;
}

.header__link {
  position: relative;
  color: var(--green);
  font-weight: 700;
  text-decoration: none;
}

.header__link:after {
  content: "";
  position: absolute;
  top: 100%;
  left: 0;
  width: 0;
  height: 3px;
  background: linear-gradient(90deg, transparent, var(--green));
  transition: width 0.3s;
}

.header__link:hover:after {
  width: 100%;
}

.logo {
  margin-right: 100px;
  position: relative;
}

.logo__bg {
  width: 150px;
  top: 125px;
  position: absolute;
}

.logo__question-mark {
  width: 150px;
  position: relative;
}

h1 {
  padding: 20px 0 42px;
  font-size: 48px;
  color: #fff;
}

p {
  padding-bottom: 12px;
  font-size: 20px;
  line-height: 32px;
}

main {
  display: flex;
  padding-top: 65px;
  padding-bottom: 30px;
}

#subscribe-button {
  display: inline-block;
  margin-top: 20px;
  position: relative;
  width: 350px;
  padding: 16px 0;
  color: #fff;
  font-size: 42px;
  font-weight: 700;
  text-align: center;
  background-color: var(--green);
  background: linear-gradient(
    to right top, var(--green), rgba(255, 255, 255, 0.6) 
  );
  border: none;
  cursor: pointer;
  overflow: hidden;
  text-decoration: none;
  text-align: center;
}

#subscribe-button:focus {
  outline-color: #fff;
}

#subscribe-button::after {
  content: "";
  height: 150%;
  width: 50px;
  position: absolute;
  left: -80px;
  top: -25%;
  transition: transform 0.4s;
  background-color: rgba(255, 255, 255, 0.2);
  transform: translateX(0) rotate(20deg);
}

#subscribe-button:hover:after {
  transform: translateX(500px) rotate(20deg);
}

.people {
  display: flex;
  height: 100%;
  margin-right: 50px;
  list-style-type: none;
}

.person:last-child {
  margin-left: 20px;
  align-self: flex-end;
}

.person__img-container {
  width: 200px;
  height: 200px;
  margin-bottom: 20px;
  background: var(--green);
  border: solid 3px #fff;
  border-radius: 100%;
  overflow: hidden;
}

.person__img {
  width: 100%;
}

.person__img--filip {
  width: 110%;
  transform: translateY(-30px);
}

.person__name {
  display: block;
  text-align: center;
  font-size: 32px;
  font-weight: 700;
  color: #fff;
  background: linear-gradient(to right,  var(--green), rgba(255, 255, 255, 0.8));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}


@keyframes slideDown {
  from {transform: translateY(0)}
  to {transform: translateY(140vh)}
}

@keyframes rotate {
  from {transform: rotate(0)}
  to {transform: rotate(360deg)}
}

/*positioning*/

/* RWD */

#mobile-headline {
  display: none;
}

#authors {
  display: none;
}

@media (max-width: 812px) {
  body {
    width: auto;
    height: auto;
    display: block;
    overflow: initial;
    background: #1b1b1b;
  }

  .background {
    display: none;
  }
  
  .container {
    width: 100%;
    display: block;
    padding: 20px 10px;
    background: none;
    max-height: 100vh;
    overflow: auto;
  }

  header {
    margin: 25px 0 50px;
  }

  main {
    flex-wrap: wrap;
    margin: 20px 0;
    padding: 0 20px;
  }

  .people {
    display: block;
    width: 100%;
    height: auto;
    text-align: center;
  }

  .person {
    margin-bottom: 20px;
  }

  .person__img-container {
    display: inline-block
  }

  header {
    flex-wrap: wrap;
    justify-content: center;
  }

  header p {
    padding: 10px 20px 0;
  }

  h1 {
    font-size: 32px;
    padding: 0 20px;
  }

  .logo {
    display: none;
  }

  .section--people {
    order: 2;
  }

  #authors {
    display: block;
  }

  #subscribe-button {
    width: 100%;
    font-size: 32px;
  }

  h2 {
    margin: 50px 0;
    font-size: 42px;
    position: relative;
    text-align: center;
  }
  
  h2:after {
    content: "";
    display: block;
    position: absolute;
    width: 100%;
    height: 5px;
    left: 0;
    bottom: -20px;
    background: linear-gradient(90deg, #38ccae 0%, #1b1b1b 90%);
  }

}

